Save and Cancel buttons alignment issues resolved.

--- a/src/main/java/org/ednovo/gooru/client/mvp/rating/ratingandreview.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/rating/ratingandreview.css
@@ -589,11 +589,10 @@ fieldset {
 	font-size: 12px;
 	color: rgb(250,176,58);
 	text-align: right;
-	padding: 10px 0px 0px 0px;
 	/* margin-right: 72px;
 	float: right;
 	width:230px; */
-	margin-right: 61px;
+	margin-right: 13px;
 	float: right;
 }
 
